package sk.fri.uniza.gui;

/**
 * 27. 2. 2022 - 15:54
 *
 * @author richa
 */
public class SettingOkno {
}
