@startuml

title __GUI's Class Diagram__\n

  namespace  {
    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.Hra {
            - frame : JFrame
            + Hra()
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.Menu {
            - frame : JFrame
            - mainPanel : JPanel
            - menuTxt : JLabel
            - quitBtn : JButton
            - settingsBtn : JButton
            - startGamebutton : JButton
            + Menu()
            - quitGame()
            - showDialog()
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.SettingOkno {
        }
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.ZadanieMenaDialog {
            - buttonCancel : JButton
            - buttonOK : JButton
            - contentPane : JPanel
            - menoField : JTextField
            - menoHraca : String
            + ZadanieMenaDialog()
            - onCancel()
            - onOK()
        }
      }
    }
  }
  

  sk.fri.uniza.gui.Hra o-- sk.fri.uniza.HraciaPlocha : hraciaPlocha
  sk.fri.uniza.gui.Hra o-- sk.fri.uniza.HraciaPlocha.VykreslovaniePlochy : vykreslovacuThread
  sk.fri.uniza.gui.ZadanieMenaDialog -up-|> javax.swing.JDialog


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
